# Genesis

./: Cargo.toml  README.md  build.rs
design/: .$design.drawio.bkp  design.drawio
docs/: TASKS.md
docs/decisions/: 001-rust-over-python.md  002-sqlite-storage.md  003-migration-system.md  004-canonical-paths.md  005-import-existing.md  006-lock-file.md  007-cwd-status.md  008-safe-delete.md  009-git-automation.md  010-file-watching.md  011-run-test.md  012-blueprints-pipeline.md  014-readme-scope.md  015-testing-scope.md  016-build-version.md  017-python-bundler.md
docs/implementation/: python_bundler.md
src/: blueprint.rs  bootstrap.rs  bundler.rs  ci.rs  cli.rs  db.rs  install.rs  main.rs  model.rs  run.rs  watcher.rs
src/bundler/: analyzer.rs  packer.rs  types.rs
src/bundler/bootloader/: Cargo.toml
src/bundler/bootloader/src/: main.rs
src/file_manager/: create.rs  delete.rs  mod.rs
src/git_automation/: mod.rs
src/scaffold/: config.rs  mod.rs  python.rs  rust.rs  version.rs
src/utilities/: lock.rs  mod.rs  validator.rs
tests/: integration.rs
