[package]
name = "genesis"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = {version = "0.4.44", features = ["serde", "clock"] }
dirs = "6.0.0"
rusqlite = "0.38.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0.18"
uuid = {version = "1.21.0", features = ["v4", "v7", "serde"]}
clap = { version = "4", features = ["derive"] }
toml = "1.0.3"
git2 = "0.20.4"
pathdiff = "0.2.1"
indicatif = "0.17"
console = "0.15"
notify = "6.1"
crossbeam-channel = "0.5"
serde_json = "1.0"
semver = "1.0"
rustyline = "12"
md5 = "0.7"
dotenvy = "0.15"

[dev-dependencies]
tempfile = "3"

[features]
default = ["python-bundler"]
python-bundler = [
    "tree-sitter",
    "tree-sitter-python",
    "zip",
]

[build-dependencies]
# Standard build script dependencies could go here


[dependencies.tree-sitter]
version = "0.20"
optional = true

[dependencies.tree-sitter-python]
version = "0.20"
optional = true

[dependencies.zip]
version = "8.1"
optional = true
