[package]
name = "genesis"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = {version = "0.4.44", features = ["serde", "clock"] }
dirs = "6.0.0"
rusqlite = "0.38.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0.18"
uuid = {version = "1.21.0", features = ["v4", "v7", "serde"]}
clap = { version = "4", features = ["derive"] }
toml = "1.0.3"
git2 = "0.20.4"
